Fixed z-index bug with scroll up btn

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -24,6 +24,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 9px;
+  z-index: 500;
   display: none;
 }
 
